--- a/css/styles.css
+++ b/css/styles.css
@@ -93,11 +93,13 @@ h1 {
 }
 
 .card .back {
-/*    background: #fff;
-    */    transform: rotateY(180deg);
+    background: #fff;
+    transform: rotateY(180deg);
 }
 
 .flag {
+    width: 100%;
+    height: 100%;
     border-radius: 6px;
 }
 
