--- a/css/styles.css
+++ b/css/styles.css
@@ -41,7 +41,7 @@ h1 {
 .deck {
     width: 660px;
     min-height: 680px;
-    background: linear-gradient(160deg, #02ccba 0%, #aa7ecd 100%);
+    background: #bbb;
     padding: 32px;
     border-radius: 10px;
     box-shadow: 12px 15px 20px 0 rgba(46, 61, 73, 0.5);
@@ -105,6 +105,10 @@ h1 {
 
 .flipped {
     transform: rotateY(180deg);
+}
+
+.matched {
+    opacity: .9;
 }
 
 /*
